[project]
name = "RAG"
version = "1.0"
description = "Agentic RAG"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.13",
    "langchain-core>=1.4.9",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.9",
    "networkx>=3.6.1",
    "plotly>=6.9.0",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm", "src/agents"]
